Update and restructure (minor)

--- a/Proxy/settings.conf
+++ b/Proxy/settings.conf
@@ -1,9 +1,9 @@
-[SCARF]
+[Scarf]
 user = rjw41005
 host = scarf.rl.ac.uk
 port = 2222
 
-[ARCHER]
+[Archer]
 user = rjw41005													# user name on remote host
 host = scarf.rl.ac.uk											# remote host
 port = 2222														# port if default ssh port (22) is blocked
