--- a/Proxy/settings.conf
+++ b/Proxy/settings.conf
@@ -4,11 +4,11 @@ host = scarf.rl.ac.uk
 port = 2222
 
 [Archer]
-user = rjw41005													# user name on remote host
-host = scarf.rl.ac.uk											# remote host
-port = 2222														# port if default ssh port (22) is blocked
+user = jtg														# user name on remote host
+host = login.archer.ac.uk										# remote host
+port = 22														# port if default ssh port (22) is blocked
 account = e280													# account on remote host
-workdir = /work/e280/e280/charlie/test							# root for temp directories on host
+workdir = /														# root for temp directories on host
 maxtime = 1														# maximum runtime (in hours)
 cores = 32														# number of cores to use
 prog = pmemd.MPI												# name of executable on remote host
