--- a/Proxy/settings.conf
+++ b/Proxy/settings.conf
@@ -4,12 +4,12 @@ host = scarf.rl.ac.uk
 port = 2222
 
 [Archer]
-user = jtg														# user name on remote host
-host = login.archer.ac.uk										# remote host
-port = 22														# port if default ssh port (22) is blocked
-account = e280													# account on remote host
-workdir = /														# root for temp directories on host
-maxtime = 1														# maximum runtime (in hours)
-cores = 32														# number of cores to use
-prog = pmemd.MPI												# name of executable on remote host
-syncf = 60														# polling/synchronisation frequency (sec)
+user = jtg
+host = login.archer.ac.uk
+port = 22
+account = e280
+workdir = /
+maxtime = 1
+cores = 32
+prog = pmemd.MPI
+syncf = 60
