--- a/Proxy/hosts.conf
+++ b/Proxy/hosts.conf
@@ -2,6 +2,8 @@
 user = rjw41005
 host = scarf.rl.ac.uk
 port = 2222
+executable = pmemd.MPI
+scheduler = LSF
 
 [Archer]
 user = jtg
@@ -11,7 +13,6 @@ account = e280
 workdir = /
 maxtime = 1
 cores = 32
-prog = pmemd.MPI
-syncf = 60
-scheduler = PBS
+executable = pmemd.MPI
+frequency = 60
 
