--- a/Proxy/hosts.conf
+++ b/Proxy/hosts.conf
@@ -1,7 +1,7 @@
 [Scarf]
-user = rjw41005
+user = scarf295
 host = scarf.rl.ac.uk
-port = 2222
+port = 22
 executable = pmemd.MPI
 scheduler = LSF
 
@@ -9,10 +9,6 @@ scheduler = LSF
 user = jtg
 host = login.archer.ac.uk
 port = 22
-account = e280
-workdir = /
-maxtime = 1
-cores = 32
 executable = pmemd.MPI
-frequency = 60
+scheduler = PBS
 
