--- a/Proxy/job.conf
+++ b/Proxy/job.conf
@@ -1,7 +1,9 @@
 [default]
+resource = Archer
+program = Amber
 executable = pmemd.MPI
 account = e280
-workdir = /
+workdir = /Desktop
 maxtime = 1
 cores = 32
 frequency = 60
