--- a/Proxy/job.conf
+++ b/Proxy/job.conf
@@ -2,8 +2,10 @@
 resource = Archer
 program = Amber
 executable = pmemd.MPI
+local_workdir = Desktop
+remote_workdir = /
 account = e280
-workdir = /Desktop
 maxtime = 1
-cores = 32
+cores = 24
+corespernode = 24
 frequency = 60
