--- a/Proxy/job.conf
+++ b/Proxy/job.conf
@@ -2,8 +2,8 @@
 resource = Archer
 program = Amber
 executable = pmemd.MPI
-local_workdir = Desktop
-remote_workdir = /
+local_workdir = Desktop/test
+remote_workdir = test
 account = e280
 maxtime = 1
 cores = 24
