updates - submitting now works

--- a/Proxy/job.conf
+++ b/Proxy/job.conf
@@ -4,7 +4,7 @@ program = Amber
 executable = pmemd.MPI
 local_workdir = Desktop/test
 remote_workdir = test
-account = e280
+account = c01-bio
 maxtime = 1
 cores = 24
 corespernode = 24
