update - small fixes

--- a/Proxy/job.conf
+++ b/Proxy/job.conf
@@ -6,6 +6,7 @@ local_workdir = Desktop/test
 remote_workdir = test
 account = c01-bio
 maxtime = 1
+nodes = 1
 cores = 24
 corespernode = 24
 frequency = 60
