--- a/Proxy/job.conf
+++ b/Proxy/job.conf
@@ -2,8 +2,8 @@
 resource = Archer
 program = Amber
 executable = pmemd.MPI
-local_workdir = Desktop/test
-remote_workdir = test
+localworkdir = Desktop/test
+remoteworkdir = test
 account = c01-bio
 maxtime = 1
 nodes = 1
