--- a/Proxy/job.conf
+++ b/Proxy/job.conf
@@ -2,7 +2,7 @@
 resource = Archer
 program = Amber
 executable = pmemd.MPI
-localworkdir = Desktop/test
+localworkdir = Desktop/batch
 remoteworkdir = test
 account = c01-bio
 maxtime = 1
@@ -10,4 +10,4 @@ nodes = 1
 cores = 1
 corespernode = 1
 frequency = 60
-batch = 1
+batch = 5
