--- a/Proxy/job.conf
+++ b/Proxy/job.conf
@@ -3,7 +3,7 @@ resource = Archer
 program = Amber
 executable = pmemd.MPI
 localworkdir = Desktop/batch
-remoteworkdir = test
+remoteworkdir = /work/e280/e280/jtg/batch
 account = c01-bio
 maxtime = 1
 nodes = 1
