added gromacs and generic class to supported apps

--- a/Proxy/job.conf
+++ b/Proxy/job.conf
@@ -1,6 +1,6 @@
 [default]
-resource = Archer
-program = Amber
+resource = Archer_e280
+program = amber
 executable = pmemd.MPI
 localworkdir = Desktop/batch
 remoteworkdir = /work/e280/e280/jtg/batch
