--- a/Proxy/hosts.conf
+++ b/Proxy/hosts.conf
@@ -4,9 +4,14 @@ host = scarf.rl.ac.uk
 port = 22
 scheduler = LSF
 
-[Archer]
-user = jtg
+[Archer_C01]
+user = jtg2
 host = login.archer.ac.uk
 port = 22
 scheduler = PBS
 
+[Archer_e280]
+user = jtg
+host = login.archer.ac.uk
+port = 22
+scheduler = PBS
