Fixes for a number of issues:
core renamed to corelibs - prevent confusion with coredumps
support for queues added
staging for multijobs refactored - to prevent blocking of finished jobs
by running jobs.
time format altered to HH:MM
special flag for marking extra files for staging - set to -stage
minor fixes

--- a/Longbow/Examples/batch/job.conf
+++ b/Longbow/Examples/batch/job.conf
@@ -1,13 +1,12 @@
 [batch]
-resource = Archer_e280
+resource = Scarf
 program = Amber
 executable = pmemd.MPI
-remoteworkdir = /work/e280/e280/jtg/
-account = c01-bio
+remoteworkdir = /home/cseg/scarf295/
 maxtime = 1
 nodes = 1
-cores = 1
+cores = 24
 corespernode = 1
-frequency = 60
+frequency = 300
 modules = amber
 batch = 5
