--- a/Longbow/Examples/multi/jobs.conf
+++ b/Longbow/Examples/multi/jobs.conf
@@ -1,29 +1,26 @@
 [job1]
-resource = Archer_e280
+resource = Scarf
 program = Amber
 executable = pmemd.MPI
-remoteworkdir = /work/e280/e280/jtg
-account = c01-bio
-maxtime = 1
+remoteworkdir = /home/cseg/scarf295
+maxtime = 12
 nodes = 1
-cores = 1
+cores = 24
 corespernode = 1
-frequency = 60
+frequency = 300
 modules = amber
-batch = 1
-commandline = -i test.in -c test.min2 -p test.top -o test.out
+commandline = -i test.in -c test.rst -p test.top -o test.out
 
 [job2]
 resource = Archer_e280
 program = Amber
 executable = pmemd.MPI
-remoteworkdir = /work/e280/e280/jtg
+remoteworkdir = /home/e280/e280/jtg
 account = c01-bio
-maxtime = 1
+maxtime = 12
 nodes = 1
-cores = 1
+cores = 24
 corespernode = 1
-frequency = 60
-batch = 1
+frequency = 300
 modules = amber
-commandline = -i test.in -c test.min2 -p test.top -o test.out
+commandline = -i test.in -c test.rst -p test.top -o test.out
