--- a/Longbow/Examples/batch/rep5/test.in
+++ b/Longbow/Examples/batch/rep5/test.in
@@ -1,15 +1,14 @@
-MD on the water about free
- &cntrl
-        ntf=2, ntb=2,
-        ntr=1,
-        nstlim=1, dt=0.002,
-        temp0=100.0, ntt=1,
-        ntp=1,
-        ntc=2,
- &end
-Restrain protein and counterions
-100.0
-RES 1 327
-END
-END
+Crambin 3NIR benchmark
 
+ &cntrl
+  imin = 0, irest = 1,
+  nstlim = 50000, dt = 0.002,
+  ntx = 5,
+  ntt = 1, temp0 = 300.0, tautp = 1.0,
+  ntb = 2, ntp = 1, pres0 = 1.0, taup = 5.0,
+  ntc = 2, ntf = 2,
+  ioutfm = 0, ntpr = 5000, ntwr = 5000, ntwe = 5000, ntwx = 5000,
+  iwrap = 1
+ /
+ &ewald
+ / 
