--- a/Longbow/hosts.conf
+++ b/Longbow/hosts.conf
@@ -4,7 +4,7 @@ host = ui3.scarf.rl.ac.uk
 port = 22
 scheduler = LSF
 
-[Archer_C01]
+[Archer_c01]
 user = jtg2
 host = login.archer.ac.uk
 port = 22
