Fix for the PBS issues:
- Can now ouput better resource requests to the PBS file.
- Added corespernode as parameter to host config to let user tell
Longbow how many cores each node of the HPC resource has.
- Added memory as a parameter to job configuration so user can request
memory in Gb.

- Fixed the False triggering of retries upon failed commands, should
only really happen on dropped connections but was being triggered by
some commands such as ls on a missing dir.

- small fixes to logger message formats.

--- a/Longbow/hosts.conf
+++ b/Longbow/hosts.conf
@@ -3,14 +3,15 @@ user = scarf295
 host = ui3.scarf.rl.ac.uk
 port = 22
 scheduler = LSF
+handler = mpirun
 
 [Archer_c01]
 user = jtg2
 host = login.archer.ac.uk
-port = 22
+corespernode = 24
 
 [Archer_e280]
 user = jtg
 host = login.archer.ac.uk
 port = 22
-scheduler = PBS
+corespernode = 24
