--- a/Longbow/Examples/multi/jobs.conf
+++ b/Longbow/Examples/multi/jobs.conf
@@ -1,26 +1,24 @@
-[job1]
+[test1]
+queue = scarf
 resource = Scarf
 program = Amber
 executable = pmemd.MPI
 remoteworkdir = /home/cseg/scarf295
-maxtime = 12
-nodes = 1
-cores = 24
-corespernode = 1
+maxtime = 00:30
+cores = 8
 frequency = 300
 modules = amber
 commandline = -i test.in -c test.rst -p test.top -o test.out
 
-[job2]
-resource = Archer_e280
+[test2]
+queue = short
+resource = Archer_c01
 program = Amber
 executable = pmemd.MPI
-remoteworkdir = /home/e280/e280/jtg
+remoteworkdir = /work/c01/c01/jtg2
 account = c01-bio
-maxtime = 12
-nodes = 1
+maxtime = 00:20
 cores = 24
-corespernode = 1
 frequency = 300
 modules = amber
 commandline = -i test.in -c test.rst -p test.top -o test.out
