QuickStart and modified hosts

--- a/Longbow/hosts.conf
+++ b/Longbow/hosts.conf
@@ -1,17 +1,33 @@
-[Scarf]
-user = scarf295
-host = ui3.scarf.rl.ac.uk
-port = 22
-scheduler = LSF
+[QuickStart]
+host = login.myhpc.ac.uk
+user = myusername
 handler = mpirun
+corespernode = 16
 
 [Archer_c01]
-user = jtg2
+port = 22
 host = login.archer.ac.uk
+user = jtg2
 corespernode = 24
 
-[Archer_e280]
-user = jtg
-host = login.archer.ac.uk
+[Minerva]
+host = login01.minerva.nottingham.ac.uk
+user = pazgs
+handler = mpirun
+scheduler = PBS
 port = 22
+corespernode = 16
+accountflag = -P
+
+[Archer_e280]
+host = login.archer.ac.uk
 corespernode = 24
+user = jtg
+port = 22
+
+[Scarf]
+host = ui3.scarf.rl.ac.uk
+handler = mpirun
+user = scarf295
+scheduler = LSF
+port = 22
