--- a/Longbow/hosts.conf
+++ b/Longbow/hosts.conf
@@ -1,28 +1,33 @@
+[Minerva]
+host = login01.minerva.nottingham.ac.uk
+user = pazgs
+scheduler = PBS
+corespernode = 16
+cores = 16
+accountflag = -P
+account = HPCA-01435-EFR
+remoteworkdir = /panfs/panasas01.panfs.cluster/pazgs/longbowTest/nonsense5
+handler = mpirun
+port = 22
+
+[Archer_e280]
+host = login.archer.ac.uk
+corespernode = 24
+user = pazgs
+remoteworkdir = /work/e280/e280/pazgs/nonsense3
+handler = aprun
+scheduler = pbs
+cores = 24
+port = 22
+account = e280-Shannon
+
 [QuickStart]
 host = login.myhpc.ac.uk
 user = myusername
 handler = mpirun
 corespernode = 16
-
-[Archer_c01]
-port = 22
-host = login.archer.ac.uk
-user = jtg2
-corespernode = 24
-
-[Minerva]
-host = login01.minerva.nottingham.ac.uk
-user = pazgs
-handler = mpirun
-scheduler = PBS
-port = 22
-corespernode = 16
-accountflag = -P
-
-[Archer_e280]
-host = login.archer.ac.uk
-corespernode = 24
-user = jtg
+remoteworkdir = /panfs/panasas01.panfs.cluster/pazgs/longbowTest
+cores = 24
 port = 22
 
 [Scarf]
@@ -31,3 +36,7 @@ handler = mpirun
 user = scarf295
 scheduler = LSF
 port = 22
+remoteworkdir = /panfs/panasas01.panfs.cluster/pazgs/longbowTest
+corespernode = 24
+cores = 24
+
