--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,8 @@
 [metadata]
-description-file = 
-	README.md
+description-file = README.rst
 
 [files]
-extra_files = 
-	README.md
+extra_files = README.rst
 
 [easy_install]
 
