--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ python:
   - "3.4"
   - "3.5"
 # command to install dependencies
+before_install:
+    - pip install pytest-cov coveralls
 install: "pip install ."
 # command to run tests
 script: py.test
+after_success:
+    - coveralls
