--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,10 @@ python:
   - "3.5"
 # command to install dependencies
 before_install:
-    - pip install pytest-cov coveralls
+  # Coveralls 4.0 doesn't support Python 3.2
+  - if [ "$TRAVIS_PYTHON_VERSION" == "3.2" ]; then travis_retry pip install coverage==3.7.1; fi
+  - if [ "$TRAVIS_PYTHON_VERSION" != "3.2" ]; then travis_retry pip install coverage; fi
+  - pip install coveralls
 install: "pip install ."
 # command to run tests
 script: py.test
