Updated example files to work with latest Longbow

--- a/Examples/MultipleJobs/MultipleJobsDifferentApplications/job.conf
+++ b/Examples/MultipleJobs/MultipleJobsDifferentApplications/job.conf
@@ -1,45 +1,44 @@
 [amber]
-executable = pmemd.MPI
 resource = Archer
-maxtime = 00:10
+maxtime = 00:15
 cores = 24
-frequency = 60
-modules = amber
+polling-frequency = 60
+staging-frequency = 120
+executable = pmemd.MPI
 executableargs = -i example.in -c example.rst -p example.top -o example.out
 
 [gromacs_s]
-executable = mdrun_mpi
 resource = Archer
-maxtime = 00:10
+maxtime = 00:15
 cores = 24
-frequency = 60
-modules = gromacs
+polling-frequency = 60
+staging-frequency = 120
+executable = mdrun_mpi
 executableargs = -deffnm example
 
 [gromacs_d]
-executable = mdrun_mpi_d
 resource = Archer
-maxtime = 00:10
+maxtime = 00:15
 cores = 24
-frequency = 60
-modules = gromacs
+polling-frequency = 60
+staging-frequency = 120
+executable = mdrun_mpi_d
 executableargs = -deffnm example
 
 [namd]
-executable = namd2
 resource = Archer
-maxtime = 00:10
+maxtime = 00:15
 cores = 24
-frequency = 60
-modules = namd
+polling-frequency = 60
+staging-frequency = 120
+executable = namd2
 executableargs = example.in > example.out
 
 [lammps]
-executable = lmp_xc30
 resource = Archer
-maxtime = 00:10
+maxtime = 00:15
 cores = 24
-frequency = 60
-modules = lammps/lammps-9Dec14
+polling-frequency = 60
+staging-frequency = 120
+executable = lmp_xc30
 executableargs = -i example.in -sf opt
-
