Alterations to the examples to make them work

--- a/examples/multiple_jobs/different_applications/job.conf
+++ b/examples/multiple_jobs/different_applications/job.conf
@@ -2,8 +2,8 @@
 resource = Archer
 maxtime = 00:15
 cores = 24
-polling-frequency = 60
-staging-frequency = 120
+polling-frequency = 30
+staging-frequency = 60
 executable = pmemd.MPI
 executableargs = -i example.in -c example.rst -p example.top -o example.out
 
@@ -11,26 +11,26 @@ executableargs = -i example.in -c example.rst -p example.top -o example.out
 resource = Archer
 maxtime = 00:15
 cores = 24
-polling-frequency = 60
-staging-frequency = 120
-executable = mdrun_mpi
-executableargs = -deffnm example
+polling-frequency = 30
+staging-frequency = 60
+executable = gmx
+executableargs = mdrun -deffnm example
 
 [gromacs_d]
 resource = Archer
 maxtime = 00:15
 cores = 24
-polling-frequency = 60
-staging-frequency = 120
-executable = mdrun_mpi_d
-executableargs = -deffnm example
+polling-frequency = 30
+staging-frequency = 60
+executable = gmx
+executableargs = mdrun -deffnm example
 
 [namd]
 resource = Archer
 maxtime = 00:15
 cores = 24
-polling-frequency = 60
-staging-frequency = 120
+polling-frequency = 30
+staging-frequency = 60
 executable = namd2
 executableargs = example.in > example.out
 
@@ -38,7 +38,7 @@ executableargs = example.in > example.out
 resource = Archer
 maxtime = 00:15
 cores = 24
-polling-frequency = 60
-staging-frequency = 120
+polling-frequency = 30
+staging-frequency = 60
 executable = lmp_xc30
 executableargs = -i example.in -sf opt
