--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,37 @@
 language: python
-python:
-  - 2.6
-  - 2.7
-  - 3.2
-  - 3.3
-  - 3.4
-  - 3.5
-  - 3.6
-  - 3.7
+matrix:
+  include:
+  - os: linux
+    dist: trusty
+    sudo: false
+    python: '2.6'
+  - os: linux
+    dist: trusty
+    sudo: false
+    python: '2.7'
+  - os: linux
+    dist: trusty
+    sudo: false
+    python: '3.3'
+  - os: linux
+    dist: trusty
+    sudo: false
+    python: '3.4'
+  - os: linux
+    dist: trusty
+    sudo: false
+    python: '3.5'
+  - os: linux
+    dist: trusty
+    sudo: false
+    python: '3.6'
+  - os: linux
+    dist: xenial
+    sudo: false
+    python: '3.7'
 # command to install dependencies
 before_install:
-  # Coverage 4.0+ doesn't support Python 3.2
-  - if [ "$TRAVIS_PYTHON_VERSION" == "3.2" ]; then travis_retry pip install coverage==3.7.1; fi
-  - if [ "$TRAVIS_PYTHON_VERSION" != "3.2" ]; then travis_retry pip install coverage; fi
+  - pip install coverage
   - pip install coveralls
 install: 
   - pip install .
