--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ matrix:
     python: '3.6'
   - os: linux
     dist: xenial
-    sudo: false
+    sudo: true
     python: '3.7'
 # command to install dependencies
 before_install:
