--- a/.travis.yml
+++ b/.travis.yml
@@ -1,37 +1,20 @@
 language: python
 matrix:
   include:
-  - os: linux
-    dist: trusty
-    sudo: false
-    python: '2.6'
-  - os: linux
-    dist: trusty
-    sudo: false
-    python: '2.7'
-  - os: linux
-    dist: trusty
-    sudo: false
-    python: '3.3'
-  - os: linux
-    dist: trusty
-    sudo: false
-    python: '3.4'
-  - os: linux
-    dist: trusty
-    sudo: false
-    python: '3.5'
-  - os: linux
-    dist: trusty
-    sudo: false
-    python: '3.6'
-  - os: linux
-    dist: xenial
-    sudo: true
-    python: '3.7'
+    - python: 2.6
+    - python: 2.7
+    - python: 3.2
+    - python: 3.3
+    - python: 3.4
+    - python: 3.5
+    - python: 3.6
+    - python: 3.7
+      dist: xenial
+      sudo: true
 # command to install dependencies
 before_install:
-  - pip install coverage
+  - if [ "$TRAVIS_PYTHON_VERSION" == "3.2" ]; then travis_retry pip install coverage==3.7.1; fi
+  - if [ "$TRAVIS_PYTHON_VERSION" != "3.2" ]; then travis_retry pip install coverage; fi
   - pip install coveralls
 install: 
   - pip install .
