--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,7 @@
 language: python
 matrix:
   include:
-    - python: 2.6
     - python: 2.7
-    - python: 3.2
-    - python: 3.3
     - python: 3.4
     - python: 3.5
     - python: 3.6
@@ -13,8 +10,7 @@ matrix:
       sudo: true
 # command to install dependencies
 before_install:
-  - if [ "$TRAVIS_PYTHON_VERSION" == "3.2" ]; then travis_retry pip install coverage==3.7.1; fi
-  - if [ "$TRAVIS_PYTHON_VERSION" != "3.2" ]; then travis_retry pip install coverage; fi
+  - pip install coverage
   - pip install coveralls
 install: 
   - pip install .
