--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ name = "Longbow"
 dynamic = ["version"]  # read from longbow/__init__.py
 description = "Biomolecular simulation remote job submission tool."
 authors = [{name = "James Gebbie-Rayet", email = "james.gebbie@stfc.ac.uk"}]
-readme = "README.rst"
+readme = "README.md"
 license = {file = "LICENSE"}
 classifiers = [
     'Development Status :: 5 - Production/Stable',
